--- a/style.css
+++ b/style.css
@@ -1,31 +1,74 @@
 html{
-    margin:0px;
-    padding:0px;
+    margin:0 px;
+    padding:0 px;
 }
 
 body{
     display:grid;
-    grid-template-rows: 480px 480px;
+    grid-template-rows:100px 480px 100px 480px;
     grid-template-columns: 1fr 1fr ;
     gap:35px 0px;
     padding-top:17px;
     padding-bottom:25px;
-    background-color: whitesmoke;
+    background-color: rgb(116, 116, 116);
 }
-
+    
 body div {
     justify-self:center;
 }
 
 body div img{
-    border:5px solid black;
+    border:5px solid whitesmoke;
     border-radius:15px;
 }
 
-.slimComic{
-    justify-self:end;
+body p{
+    justify-self: flex-end;
+    
 }
 
-.rightTear{
-    justify-self:flex-start;
+
+/*COMICS*/
+
+.comicTitle{
+    grid-row:1 /2;
+    text-align:center;
+    align-self:center;
+    margin:0px;
+    font-family: 'Playfair Display', serif;
+    font-size: 45px;
+    border-bottom: 2px white solid;
+    color:rgb(255, 255, 255);
+
+}
+
+.comicLeft{
+    grid-row: 2 / 3;
+}
+
+.comicRight{
+    grid-row:2 / 3;
+}
+
+/*TEAR ART*/
+
+.tearTitle{
+    margin:0px;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    text-align: center;
+    align-self: center;
+    font-family: 'Playfair Display', serif;
+    font-size: 45px;
+    border-bottom: 2px whitesmoke solid;
+    color:rgb(255, 255, 255);
+
+}
+
+.tearLeft{
+    grid-row: 4 /5;
+}
+
+.tearRight{
+    grid-row: 4/5;
 }
